--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -1,6 +1,32 @@
 .splash__main-container {
-  background-image: url("https://images.unsplash.com/photo-1509440159596-0249088772ff?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80");
-  object-fit: cover;
   width: 100%;
-  height: 800px;
+  height: 500px;
+  display: grid;
+  grid-template-columns: 20% 60% 20%;
+  grid-template-rows: 15% 70% 15%; 
+}
+
+.splash__image--background {
+  grid-column-start: 2;
+  grid-row-start: 2;
+}
+
+.splash__main-intro {
+  position:relative;
+  grid-column-start: 2;
+  grid-row-start: 2;
+  background-color: rgba(255, 255, 255, 0.7);
+  width: 400px;
+  height: 150px;
+  margin-left: 175px;
+  margin-top: 250px;
+  border-radius: 15px;
+}
+
+.splash__intro-text {
+  width: 300px;
+  display: flex;
+  margin-left: 57px;
+  margin-top: 44px;
+  font-size: large;
 }
