--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -57,10 +57,38 @@
   align-items: center;
 }
 
+.signup__welcome-button {
+  font-family: Indie Flower;
+  font-size: 2rem;
+  width: 80%;
+  height: 100%;
+  border-radius: 10px;
+  margin-top: 3em;
+  background-color: white;
+  text-shadow: 0px 0px 4px rgba(250, 250, 4, 0.8);
+  box-shadow: 0px 0px 30px 7px rgba(100, 100, 100, 0.3);
+  outline: 1px solid rgba(100, 100, 100, 0.05);
+  border: none;
+}
+
 .signup__button-container--right {
   grid-column-start: 3;
   grid-row-start: 2;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.signup__login-button {
+  font-family: Indie Flower;
+  font-size: 2rem;
+  width: 80%;
+  height: 100%;
+  border-radius: 10px;
+  margin-top: 3em;
+  background-color: white;
+  text-shadow: 0px 0px 4px rgba(250, 250, 4, 0.8);
+  box-shadow: 0px 0px 30px 7px rgba(100, 100, 100, 0.3);
+  outline: 1px solid rgba(100, 100, 100, 0.05);
+  border: none;
 }
