--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Indie Flower;
+  src: url("https://fonts.googleapis.com/css2?family=Indie+Flower");
+}
+
 .splash__main-container {
   width: 100%;
   height: 500px;
@@ -24,11 +29,13 @@
 }
 
 .splash__intro-text {
+  font-family: Indie Flower;
+  font-size: 1.2rem;
+  font-weight: 700;
   width: 300px;
   display: flex;
-  margin-left: 57px;
-  margin-top: 44px;
-  font-size: large;
+  margin-left: 2.5em;
+  margin-top: 1em;
 }
 
 .splash__button-container--left {
@@ -39,10 +46,38 @@
   align-items: center;
 }
 
+.splash__login-button {
+  font-family: Indie Flower;
+  font-size: 2rem;
+  width: 80%;
+  height: 100%;
+  border-radius: 10px;
+  margin-top: 3em;
+  background-color: white;
+  text-shadow: 0px 0px 4px rgba(250, 250, 4, 0.8);
+  box-shadow: 0px 0px 30px 7px rgba(100, 100, 100, 0.3);
+  outline: 1px solid rgba(100, 100, 100, 0.05);
+  border: none;
+}
+
 .splash__button-container--right {
   grid-column-start: 3;
   grid-row-start: 2;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.splash__signup-button {
+  font-family: Indie Flower;
+  font-size: 2rem;
+  width: 80%;
+  height: 100%;
+  border-radius: 10px;
+  margin-top: 3em;
+  background-color: white;
+  text-shadow: 0px 0px 4px rgba(250, 250, 4, 0.8);
+  box-shadow: 0px 0px 30px 7px rgba(100, 100, 100, 0.3);
+  outline: 1px solid rgba(100, 100, 100, 0.05);
+  border: none;
 }
