--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,20 @@
 
+
+
+div {
+  animation: transitionIn 0.75s;
+}
+
+
+@keyframes transitionIn {
+  from {
+      opacity: 0;
+      transform: translateY(-100px);
+  }
+
+  to {
+      opacity: 1;
+      transform: translateY(0deg);
+
+  }
+}
