--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -12,19 +12,21 @@
 }
 
 .signup__form-container {
+  font-family: Indie Flower;
+  font-size: 1rem;
+  font-weight: 900;
   grid-column-start: 2;
   grid-row-start: 2;
   background-color: rgba(255, 255, 255, 0.7);
   width: 300px;
-  height: 430px;
-  margin-left: 395px;
+  height: 130%;
+  margin-left: 50%;
   margin-top: 20px;
-  border-radius: 25%;
-  padding: 15px;
+  border-radius: 15px;
 }
 
 .signup__input-fields {
-  padding: 4px;
+  /* padding: 4px; */
   margin-left: 55px;
   margin-right: 55px;
 }
@@ -39,14 +41,22 @@
 }
 
 .signup__input-label {
-  padding: 4px;
+  /* padding: 4px; */
   margin-left: 55px;
   margin-right: 5px;
 }
 
 .signup__submit-button {
-  margin-top: 20px;
-  margin-left: 110px;
+  font-family: Indie Flower;
+  font-size: large;
+  font-weight: 900;
+  width: 40%;
+  margin-left: 25%;
+  border-radius: 5px;
+  justify-content: center;
+  text-shadow: 0px 0px 4px rgba(250, 250, 4, 0.8);
+  box-shadow: 1px 1px 10px 7px rgba(100, 100, 100, 0.3);
+  outline: 1px solid rgba(100, 100, 100, 0.05);
 }
 
 .signup__button-container--left {
