--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -1,6 +1,3 @@
-/* @import "~slick-carousel/slick/slick.css";  */
-/* @import "~slick-carousel/slick/slick-theme.css"; */
-
 @font-face {
   font-family: EraserRegular;
   src: url("./EraserRegular.ttf")
@@ -20,10 +17,6 @@
   background-color: beige;
 }
 
-.home__image-container--logo {
-  
-}
-
 .home__text-container--banner {
   position: absolute;
   top: 2em;
@@ -35,8 +28,8 @@
 
 .home__image-container--cart {
   display: flex;
-  justify-content: flex-end;
-  grid-column-start: 3;
+  justify-content: center;
+  grid-column-start: 4;
   grid-row-start: 1;
 }
 
@@ -48,17 +41,23 @@
   grid-row-start: 1;
 }
 
-/* .home__image--left {
+.home__logout-button {
+  background-color: beige;
   border-radius: 50%;
-  margin-top: 40px;
-  border: rgba(250, 250, 4, 0.2) solid 7px;
-} */
-
+  margin-top: 5px;
+  font-family: Indie Flower;
+  font-weight: 800;
+  font-size: large;
+  text-shadow: 0px 0px 4px rgba(250, 250, 4, 0.8);
+  box-shadow: 1px 1px 10px 7px rgba(100, 100, 100, 0.3);
+  outline: 1px solid rgba(100, 100, 100, 0.05);
+  border: none;
+}
 
 .home__image-container--chalkboard {
   background: url("./chalkboard.jpg");
   background-repeat: no-repeat;
-  background-size: 80% 100%;
+  background-size: 80% 80%;
   background-position: center;
   display: flex;
   justify-content: center;
@@ -80,6 +79,7 @@
   text-decoration: underline;
   margin-left: 10%;
   margin-right: 10%;
+  margin-top: 20%
 }
 
 .home__chalkboard-text--content {
@@ -87,17 +87,7 @@
   position: relative;
 }
 
-.home__image--bottom {
-  /* width: 18rem; */
-  /* height: 60%; */
-  /* margin-top: 5%; */
-}
-
 .home__image-container--bottom {
-  /* grid-column-start: 2; */
-  /* width: 80%; */
-  /* color: black;  */
-  /* height: 100px; */
   grid-column-start: 3;
   grid-column-end: 6;
   grid-row-start: 2;
@@ -105,15 +95,6 @@
   margin: 100px;
 }
 
-
-
 .slick-dots {
   margin: 10px;
-}
-
-.slick-arrow slick-prev {
-  /* position: fixed; */
-  /* top: 10px; */
-  /* margin: 10px; */
-  /* padding: 10px; */
 }
