--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -69,10 +69,13 @@
 }
 
 .login__signup-button {
+  background-image: url("https://p.kindpng.com/picc/s/217-2172654_text-box-border-decorative-text-box-borders-transparent.png");
+  background-position: center;
+  background-size: contain;
   font-family: Indie Flower;
   font-size: 2rem;
   width: 80%;
-  height: 100%;
+  height: 50%;
   border-radius: 10px;
   margin-top: 3em;
   background-color: white;
@@ -91,10 +94,13 @@
 }
 
 .login__welcome-button {
+  background-image: url("https://p.kindpng.com/picc/s/217-2172654_text-box-border-decorative-text-box-borders-transparent.png");
+  background-position: center;
+  background-size: contain;
   font-family: Indie Flower;
   font-size: 2rem;
   width: 80%;
-  height: 100%;
+  height: 50%;
   border-radius: 10px;
   margin-top: 3em;
   background-color: white;
