--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -26,9 +26,21 @@
 }
 
 .signup__input-fields {
-  /* padding: 4px; */
+  outline: none;
+  border: none;
+  background-color: transparent;
   margin-left: 55px;
   margin-right: 55px;
+}
+
+.signup__input-fields:hover {
+  border: 1px solid black;
+  box-shadow: 2px 2px 10px 10px beige;
+}
+
+.signup__input-fields:focus {
+  border-bottom: 2px solid black;
+  box-shadow: 2px 2px 10px 10px beige;
 }
 
 .signup__input-fields--baker {
@@ -68,13 +80,13 @@
 }
 
 .signup__welcome-button {
-  background-image: url("https://cdn4.iconfinder.com/data/icons/art-deco/2126/art_deco_28-512.png");
+  background-image: url("https://p.kindpng.com/picc/s/217-2172654_text-box-border-decorative-text-box-borders-transparent.png");
   background-position: center;
-  background-size: cover;
+  background-size: contain;
   font-family: Indie Flower;
   font-size: 2rem;
-  width: 87%;
-  height: 100%;
+  width: 80%;
+  height: 50%;
   border-radius: 10px;
   margin-top: 3em;
   background-color: white;
@@ -93,13 +105,13 @@
 }
 
 .signup__login-button {
-  background-image: url("https://cdn4.iconfinder.com/data/icons/art-deco/2126/art_deco_28-512.png");
+  background-image: url("https://p.kindpng.com/picc/s/217-2172654_text-box-border-decorative-text-box-borders-transparent.png");
   background-position: center;
-  background-size: cover;
+  background-size: contain;
   font-family: Indie Flower;
   font-size: 2rem;
-  width: 87%;
-  height: 100%;
+  width: 80%;
+  height: 50%;
   border-radius: 10px;
   margin-top: 3em;
   background-color: white;
