--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -47,13 +47,13 @@
 }
 
 .splash__login-button {
-  background-image: url("https://cdn4.iconfinder.com/data/icons/art-deco/2126/art_deco_30-512.png");
+  background-image: url("https://p.kindpng.com/picc/s/217-2172654_text-box-border-decorative-text-box-borders-transparent.png");
   background-position: center;
   background-size: contain;
   font-family: Indie Flower;
   font-size: 2rem;
   width: 80%;
-  height: 60%;
+  height: 50%;
   border-radius: 10px;
   margin-top: 3em;
   background-color: white;
@@ -72,13 +72,13 @@
 }
 
 .splash__signup-button {
-  background-image: url("https://cdn4.iconfinder.com/data/icons/art-deco/2126/art_deco_30-512.png");
+  background-image: url("https://p.kindpng.com/picc/s/217-2172654_text-box-border-decorative-text-box-borders-transparent.png");
   background-position: center;
   background-size: contain;
   font-family: Indie Flower;
   font-size: 2rem;
   width: 80%;
-  height: 60%;
+  height: 50%;
   border-radius: 10px;
   margin-top: 3em;
   background-color: white;
