--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -31,16 +31,21 @@
   background-color: transparent;
   margin-left: 55px;
   margin-right: 55px;
+  transition: transform 0.75s;
 }
 
 .signup__input-fields:hover {
+  background-color:  rgba(255, 255, 255, 0.8);
   border: 1px solid black;
   box-shadow: 2px 2px 10px 10px beige;
+  transform: scale(1.83);
 }
 
 .signup__input-fields:focus {
+  background-color:  rgba(255, 255, 255, 0.8);
   border-bottom: 2px solid black;
   box-shadow: 2px 2px 10px 10px beige;
+  transform: scale(1.83);
 }
 
 .signup__input-fields--baker {
