--- a/frontend/src/components/Cart/Cart.css
+++ b/frontend/src/components/Cart/Cart.css
@@ -1,5 +1,37 @@
+body {
+  background: beige;
+}
+
 .cart__container--navbar {
-  height: 75px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 90px;
+}
+
+.cart__container--monetary {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  margin-right: 50px;  
+}
+
+.cart__button--home {
+  background-image: url("https://p.kindpng.com/picc/s/217-2172654_text-box-border-decorative-text-box-borders-transparent.png");
+  background-position: center;
+  background-size: contain;
+  font-family: Indie Flower;
+  font-size: 1.3rem;
+  font-weight: 900;
+  width: 96px;
+  height: 76px;
+  border-radius: 10px;
+  margin-left:  30px;
+  background-color: white;
+  text-shadow: 0px 0px 4px rgba(250, 250, 4, 0.8);
+  box-shadow: 0px 0px 30px 7px rgba(100, 100, 100, 0.3);
+  outline: 1px solid rgba(100, 100, 100, 0.05);
+  border: none;
 }
 
 .cart__navbar {
@@ -7,9 +39,12 @@
 }
 
 .cart__container--products {
-  outline: 1px solid black;
+  height: 100maxvh;
+  /* background: rgb(255,255,255); */
+  /* background: linear-gradient(180deg, rgba(255,255,255,1) 41%, rgba(231,199,12,1) 87%); */
 }
 
-.cart__container--monetary {
-  margin-top: 100px;
+.productDetail__product-wrapper {
+  outline: 1px solid black;
+  margin: 20px;
 }
