--- a/frontend/src/components/Cart/Cart.css
+++ b/frontend/src/components/Cart/Cart.css
@@ -27,7 +27,7 @@ body {
   height: 76px;
   border-radius: 10px;
   margin-left:  30px;
-  background-color: white;
+  background-color: transparent;
   text-shadow: 0px 0px 4px rgba(250, 250, 4, 0.8);
   box-shadow: 0px 0px 30px 7px rgba(100, 100, 100, 0.3);
   outline: 1px solid rgba(100, 100, 100, 0.05);
