--- a/frontend/src/components/Cart/Cart.css
+++ b/frontend/src/components/Cart/Cart.css
@@ -51,6 +51,10 @@ body {
   border: none;
 }
 
+.cart__button--checkout:hover {
+  animation: productanime 0.33s;
+}
+
 .cart__button--home {
   background-image: url("https://p.kindpng.com/picc/s/217-2172654_text-box-border-decorative-text-box-borders-transparent.png");
   background-position: center;
@@ -69,6 +73,10 @@ body {
   border: none;
 }
 
+.cart__button--home:hover {
+  animation: productanime 0.33s;
+}
+
 .cart__navbar {
   text-decoration: none;
 }
@@ -78,7 +86,7 @@ body {
 }
 
 .productDetail__product-wrapper:hover {
-  animation: productanime 1s;
+  animation: productanime 0.5s;
 }
 
 .productDetail__product-wrapper {
