--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -43,23 +43,38 @@
   border: none;
   background-color: transparent;
   /* box-shadow: 1px 1px 10px 7px beige; */
-  transition: transform 1s;
+  /* transition: transform 1s; */
 }
 
 .login__input--password {
   outline: none;
   border: none;
   background-color: transparent;
-  transition: transform 0.75s;
-
 }
 
-.login__input--email:hover, 
-.login__input--password:hover {
+.login__input-wrapper--email,
+.login__input-wrapper--password {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  transition: transform 0.5s;
+  transition-timing-function: ease-in-out;
+  
+}
+
+.login__input-wrapper--email:hover, 
+.login__input-wrapper--password:hover {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-color:  rgba(255, 255, 255, 0.8);
   box-shadow: 2px 2px 10px 10px beige;
   border: 1px solid black;
-  transform: scale(1.83);
+  transform: scale(1.25);
+  transition-timing-function: ease-in-out;
 }
 
 .login__input--email:focus, 
