--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -29,12 +29,33 @@
   outline: none;
   border: none;
   background-color: transparent;
-  margin-left: 55px;
-  margin-right: 55px;
-  transition: transform 0.75s;
+  /* margin-left: 55px;
+  margin-right: 55px; */
+  /* transition: transform 1.75s; */
 }
 
-.signup__input-fields:hover {
+.form-signup__wrapper--input {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  transition: transform .5s;
+  transition-timing-function: ease-in-out;
+}
+
+.form-signup__wrapper--input:hover {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color:  rgba(255, 255, 255, 0.8);
+  border: 1px solid black;
+  box-shadow: 2px 2px 10px 10px beige;
+  transform: scale(1.25);
+}
+
+/* .signup__input-fields:hover {
   background-color:  rgba(255, 255, 255, 0.8);
   border: 1px solid black;
   box-shadow: 2px 2px 10px 10px beige;
@@ -46,7 +67,7 @@
   border-bottom: 2px solid black;
   box-shadow: 2px 2px 10px 10px beige;
   transform: scale(1.83);
-}
+} */
 
 .signup__input-fields--baker {
   margin-left: 10px;
@@ -59,8 +80,8 @@
 
 .signup__input-label {
   /* padding: 4px; */
-  margin-left: 55px;
-  margin-right: 5px;
+  /* margin-left: 55px;
+  margin-right: 5px; */
 }
 
 .signup__submit-button {
@@ -68,7 +89,7 @@
   font-size: large;
   font-weight: 900;
   width: 40%;
-  margin-left: 25%;
+  margin-left: 30%;
   border-radius: 5px;
   justify-content: center;
   text-shadow: 0px 0px 4px rgba(250, 250, 4, 0.8);
