--- a/frontend/src/components/Cart/Cart.css
+++ b/frontend/src/components/Cart/Cart.css
@@ -42,7 +42,7 @@ body {
   background-position: center;
   background-size: 65px 65px;
   border: none;
-  margin-left: 40em;
+  /* margin-left: 40px; */
   margin-right: 0px;
 }
 
@@ -50,7 +50,7 @@ body {
   -webkit-animation: heartbeat 1.5s ease-in-out infinite both;
   animation: heartbeat 1.5s ease-in-out infinite both;
   border-radius: 50%;
-  box-shadow: 0px 0px 40px 5px red;
+  box-shadow: 0px 0px 40px 5px rgba(255, 0, 0, 0.4);
 }
 
 /* ----------------------------------------------
