fixed checkout load bug

--- a/frontend/src/components/Cart/Cart.css
+++ b/frontend/src/components/Cart/Cart.css
@@ -3,9 +3,9 @@
   src: url("https://fonts.googleapis.com/css2?family=Indie+Flower");
 }
 
-body {
+/* body {
   background: hsl(60, 56%, 91%);
-}
+} */
 
 
 .cart__container--navbar {
