--- a/frontend/src/components/Checkout/Checkout.css
+++ b/frontend/src/components/Checkout/Checkout.css
@@ -1,5 +1,9 @@
 .checkout__container--page {
   width: 100%;
-  height: 100%;
-  /* background-color: black; */
+  height: 100vmax;
+  background-color: white;
+  background-image: url("https://cdn.shopify.com/s/files/1/0586/2193/products/GC36321__30_R_1024x1024.jpg?v=1591899775");
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: 1000px, 1000px;
 }
