--- a/frontend/src/components/Checkout/Checkout.css
+++ b/frontend/src/components/Checkout/Checkout.css
@@ -1,9 +1,45 @@
 .checkout__container--page {
   width: 100%;
   height: 100vmax;
-  background-color: white;
-  background-image: url("https://cdn.shopify.com/s/files/1/0586/2193/products/GC36321__30_R_1024x1024.jpg?v=1591899775");
-  background-repeat: no-repeat;
-  background-position: top;
-  background-size: 1000px, 1000px;
+  /* background-color: white; */
+}
+
+.checkout__button--home {
+  background-image: url("https://p.kindpng.com/picc/s/217-2172654_text-box-border-decorative-text-box-borders-transparent.png");
+  background-position: center;
+  background-size: contain;
+  font-family: Indie Flower;
+  font-size: 1.3rem;
+  font-weight: 900;
+  width: 96px;
+  height: 76px;
+  border-radius: 10px;
+  margin-left:  30px;
+  background-color: transparent;
+  text-shadow: 0px 0px 4px rgba(250, 250, 4, 0.8);
+  box-shadow: 0px 0px 30px 7px rgba(100, 100, 100, 0.3);
+  outline: 1px solid rgba(100, 100, 100, 0.05);
+  border: none;
+}
+
+.checkout__check-container {
+ position: absolute;
+ display: flex;
+ width: 500px;
+ top: -75px;
+ left: 13%;
+ background-color: transparent;
+ z-index: -1;
+}
+
+.checkout__check-text {
+  position: absolute;
+  display: flex;
+  background-color: transparent;
+  top: 270px;
+  left: 70%;
+  width: 400px;
+  height: 551px;
+  color: black;
+  z-index: 0;
 }
