--- a/frontend/src/components/Checkout/Checkout.css
+++ b/frontend/src/components/Checkout/Checkout.css
@@ -171,6 +171,17 @@
   height: 15px;
 }
 
+.checkout__credit-card--submit {
+  border: none;
+  outline: none;
+  background-color: white;
+  position: absolute;
+  top: 187px;
+  left: 0px;
+  width: 75px;
+  height: 30px;
+}
+
 .checkout__card-holder {
   position: absolute;
   left: 570px;
