--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -26,7 +26,7 @@
   width: 206px;
   height: 216px;
   color: black;
-  margin-top: 236px;
+  margin-top: 206px;
   margin-left: 100px;
   border-radius: 15px;
   padding: 15px;
@@ -91,6 +91,20 @@
   font-weight: 900;
   width: 40%;
   margin: 20px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  align-self: center;
+  text-shadow: 0px 0px 4px rgba(250, 250, 4, 0.8);
+  box-shadow: 1px 1px 10px 7px rgba(100, 100, 100, 0.3);
+  outline: 1px solid rgba(100, 100, 100, 0.05);
+}
+
+.login__submit-button--demo {
+  font-family: Indie Flower;
+  font-size: large;
+  font-weight: 900;
+  width: 55%;
+  margin: 0px;
   margin-bottom: 10px;
   border-radius: 5px;
   align-self: center;
