--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -1,3 +1,13 @@
+
+
+
+.login__image--background {
+  margin-left: 3.3%;
+  margin-top: 10%;
+  border-radius: 25px;
+  box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.7);
+}
+
 .login__form-wrapper {
   width: 100%;
   height: 500px;
