--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -7,8 +7,9 @@
 }
 
 .signup__image--background {
-  grid-column-start: 2;
-  grid-row-start: 2;
+  margin-left: 3.3%;
+  margin-top: 10%;
+  border-radius: 25px;
 }
 
 .signup__form-container {
@@ -21,7 +22,7 @@
   width: 300px;
   height: 130%;
   margin-left: 50%;
-  margin-top: 20px;
+  margin-top: 25px;
   border-radius: 15px;
 }
 
