added fonts and styles to checkout

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,13 @@
+@font-face {
+  font-family: Indie Flower;
+  src: url("https://fonts.googleapis.com/css2?family=Indie+Flower");
+}
 
+
+body {
+  background: white;
+  background: radial-gradient(circle, rgba(236, 235, 148, 0.76) 50%, rgba(255,255,255,1) 85%);
+}
 
 
 .effects, .home__image--bottom {
