--- a/frontend/src/components/Checkout/Checkout.css
+++ b/frontend/src/components/Checkout/Checkout.css
@@ -117,15 +117,18 @@
   flex-direction: column;
   background-color: transparent;
   top: 23%;
-  left: 10%;
+  left: 7%;
   width: 400px;
   height: 551px;
+  font-family: Indie Flower;
+  font-size: x-large;
+  font-weight: 800;
   color: black;
   z-index: 10;
 }
 
 .checkout__check-text span {
-  margin: 2.4%;
+  margin: 0.27%;
 }
 
 .checkout__container--credit {
