--- a/frontend/src/components/Checkout/Checkout.css
+++ b/frontend/src/components/Checkout/Checkout.css
@@ -1,7 +1,10 @@
 .checkout__container--page {
   width: 100%;
   height: 100vmax;
-  /* background-color: white; */
+  background-image: url("./wood-grain.jpg");
+  background-repeat: no-repeat;
+  background-size: 760px 1000px;
+  z-index: -40;
 }
 
 .checkout__button--home {
@@ -108,7 +111,7 @@
  top: 0px;
  left: 23%;
  background-color: transparent;
- z-index: -1;
+ z-index: 1;
 }
 
 .checkout__check-text {
@@ -176,8 +179,8 @@
 
 .checkout__container--credit {
   position: relative;
-  left: 880px;
-  top: 75px;
+  left: 919px;
+  top: 350px;
 }
 
 
@@ -230,7 +233,7 @@
 
 .checkout__card-holder {
   position: absolute;
-  left: 570px;
-  top: -150px;
+  left: 660px;
+  top: -92px;
   z-index: -10;
 }
