--- a/frontend/src/components/Checkout/Checkout.css
+++ b/frontend/src/components/Checkout/Checkout.css
@@ -7,25 +7,34 @@
   z-index: -40;
 }
 
-.checkout__button--home {
+.checkout__buttons-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.checkout__button--home, 
+.checkout__button--cart {
   background-image: url("https://p.kindpng.com/picc/s/217-2172654_text-box-border-decorative-text-box-borders-transparent.png");
   background-position: center;
   background-size: contain;
   font-family: Indie Flower;
   font-size: 1.3rem;
   font-weight: 900;
-  width: 96px;
-  height: 76px;
+  width: 176px;
+  height: 146px;
   border-radius: 10px;
+  margin: 40px;
+  margin-top: 20px;
   margin-left:  30px;
   background-color: transparent;
   text-shadow: 0px 0px 4px rgba(250, 250, 4, 0.8);
-  box-shadow: 0px 0px 30px 7px rgba(100, 100, 100, 0.3);
+  box-shadow: 0px 0px 30px 7px rgba(0, 0, 0, 0.9);
   outline: 1px solid rgba(100, 100, 100, 0.05);
   border: none;
 }
 
-.checkout__button--home:hover {
+.checkout__button--home:hover,
+.checkout__button--cart:hover {
   -webkit-animation: jello-vertical 0.9s both;
   animation: jello-vertical 0.9s both;
 }
@@ -178,9 +187,9 @@
 }
 
 .checkout__container--credit {
-  position: relative;
-  left: 919px;
-  top: 350px;
+  position: absolute;
+  left: 73%;
+  top: 51%;
 }
 
 
