--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -1,11 +1,8 @@
-
-
-
 .login__image--background {
-  margin-left: 3.3%;
+  /* margin-left: 3.3%; */
   margin-top: 10%;
   border-radius: 25px;
-  box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.7);
+  box-shadow: 0px 0px 30px 20px rgba(0, 0, 0, 0.7);
 }
 
 .login__form-wrapper {
@@ -52,8 +49,6 @@
   outline: none;
   border: none;
   background-color: transparent;
-  /* box-shadow: 1px 1px 10px 7px beige; */
-  /* transition: transform 1s; */
 }
 
 .login__input--password {
@@ -71,7 +66,6 @@
   width: 100%;
   transition: transform 0.5s;
   transition-timing-function: ease-in-out;
-
 }
 
 .login__input-wrapper--email:hover,
@@ -186,13 +180,6 @@
     opacity: 1;
   }
 }
-
-
-/* .login__signup-button:hover {
-  -webkit-animation: flip-scale-up-diag-2 0.5s linear both;
-  animation: flip-scale-up-diag-2 0.5s linear both;
-  transition-timing-function: ease-in-out;
-} */
 
 .login__button-container--left {
   grid-column-start: 1;
