--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -13,12 +13,10 @@
 }
 
 .splash__image--background {
-  margin-left: 112%;
+  margin-left: 100%;
   margin-top: 30%;
   border-radius: 25px;
-
-  /* grid-column-start: 2;
-  grid-row-start: 2; */
+  box-shadow: 0px 0px 30px 20px rgba(0, 0, 0, 0.7);
 }
 
 .splash__main-intro {
@@ -147,13 +145,6 @@
     opacity: 1;
   }
 }
-
-
-/* .splash__login-button:hover {
-  -webkit-animation: flip-scale-up-diag-2 0.5s linear both;
-  animation: flip-scale-up-diag-2 0.5s linear both;
-  transition-timing-function: ease-in-out;
-} */
 
 .splash__button-container--right {
   grid-column-start: 3;
