lunch time save

--- a/frontend/src/components/ThankYou/ThankYou.css
+++ b/frontend/src/components/ThankYou/ThankYou.css
@@ -10,6 +10,12 @@
   justify-content: center;
 }
 
+.rick__roll--video {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
 /* 
 fireworks animation courtesy Eddie Lin via codepen:
