--- a/frontend/src/components/Cart/Cart.css
+++ b/frontend/src/components/Cart/Cart.css
@@ -50,7 +50,7 @@
   -webkit-animation: heartbeat 1.5s ease-in-out infinite both;
   animation: heartbeat 1.5s ease-in-out infinite both;
   border-radius: 50%;
-  box-shadow: 0px 0px 40px 5px rgba(255, 0, 0, 0.4);
+  /* box-shadow: 0px 0px 40px 5px rgba(255, 0, 0, 0.4); */
 }
 
 /* ----------------------------------------------
