--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -13,7 +13,7 @@
   grid-template-rows: 15% 70% 15%;
 }
 
-.login__form-login {
+.form-login {
   font-family: Indie Flower;
   font-size: 1.2rem;
   font-weight: 900;
@@ -31,90 +31,112 @@
   position: relative;
   background-color: rgba(255, 255, 255, 0.6);
   width: 206px;
-  height: 216px;
+  height: 316px;
   color: black;
-  margin-top: 206px;
+  margin-top: 106px;
   margin-left: 100px;
   border-radius: 15px;
   padding: 15px;
 }
 
-.login__input-wrapper--main > span{
-  align-self: center;
-  font-size: xx-large;
-  font-weight: 900;
+.form-login h2 {
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  color: #000;
+  margin-left: 30%;
+  margin-bottom: 50px;
 }
 
-.login__input--email {
-  outline: none;
-  border: none;
-  background-color: transparent;
-}
 
-.login__input--password {
-  outline: none;
-  border: none;
-  background-color: transparent;
-}
-
-.login__input-wrapper--email,
-.login__input-wrapper--password {
+.input-wrapper {
+  position: relative;
+  margin-top: 7px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  transition: transform 0.5s;
-  transition-timing-function: ease-in-out;
 }
 
-.login__input-wrapper--email:hover,
-.login__input-wrapper--password:hover {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color:  rgba(255, 255, 255, 0.8);
-  box-shadow: 2px 2px 10px 10px beige;
-  border: 1px solid black;
-  transform: scale(1.25);
-  transition-timing-function: ease-in-out;
+.login-form__input--name,
+.login-form__input--password {
+  font-family: Nunito, sans-serif;
+  font-size: 16px;
+  color: #fff;
+  background: transparent;
+  width: 80%;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid green;
+  margin-bottom: 30px;
 }
 
-.login__input--email:focus,
-.login__input--password:focus {
-  background-color:  rgba(255, 255, 255, 0.8);
-  box-shadow: 2px 2px 10px 10px beige;
-  border: 1px solid black;
-  transform: scale(1.83);
+.login-form__label--name {
+  font-family: Nunito, sans-serif;
+  position: absolute;
+  top: -6px;
+  left: 0;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  pointer-events:none;
+  transition: 0.5s;
 }
 
-.login__submit-button {
-  font-family: Indie Flower;
+.login-form__label--password {
+  font-family: Nunito, sans-serif;
+  position: absolute;
+  top: 45px;
+  left: 0;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  pointer-events:none;
+  transition: 0.5s;
+}
+
+.login-form__input--name:focus ~ .login-form__label--name,
+.login-form__input--name:hover ~ .login-form__label--name,
+.login-form__input--name:valid ~ .login-form__label--name {
+  top: -30px;
+  color: rgba(0, 128, 0, 0.8);
+  font-size: 12px;
+}
+
+.login-form__input--password:focus ~ .login-form__label--password,
+.login-form__input--password:hover ~ .login-form__label--password,
+.login-form__input--password:valid ~ .login-form__label--password {
+  color: rgba(0, 128, 0, 0.8);
+  font-size: 12px;
+  top: 21px;
+}
+
+.login-form__button {
+  font-family: Nunito, sans-serif;
   font-size: large;
-  font-weight: 900;
-  width: 40%;
-  margin: 20px;
-  margin-bottom: 10px;
-  border-radius: 5px;
-  align-self: center;
-  text-shadow: 0px 0px 4px rgba(250, 250, 4, 0.8);
-  box-shadow: 1px 1px 10px 7px rgba(100, 100, 100, 0.3);
-  outline: 1px solid rgba(100, 100, 100, 0.05);
+  font-weight: 600;
+  width: 88px;
+  height: 38px;
+  margin-top: 25px;
+  margin-left: 30%;
+  background-color: rgba(0, 128, 0, 0.5);
+  color: white;
+  box-shadow: none;
+  border: none;
+  outline: none;
 }
 
-.login__submit-button--demo {
-  font-family: Indie Flower;
+.login-form__button--demo {
+  font-family: Nunito, sans-serif;
   font-size: large;
-  font-weight: 900;
-  width: 55%;
-  margin: 0px;
-  margin-bottom: 10px;
-  border-radius: 5px;
-  align-self: center;
-  text-shadow: 0px 0px 4px rgba(250, 250, 4, 0.8);
-  box-shadow: 1px 1px 10px 7px rgba(100, 100, 100, 0.3);
-  outline: 1px solid rgba(100, 100, 100, 0.05);
+  font-weight: 600;
+  width: 88px;
+  height: 43px;
+  margin-top: 15px;
+  margin-left: 30%;
+  background-color: rgba(0, 128, 0, 0.5);
+  color: white;
+  box-shadow: none;
+  border: none;
+  outline: none;
 }
 
 .login__button-container--right {
